tests/auto/quick/qquicktextedit/tst_qquicktextedit.cpp
@@ -6607,7 +6607,7 @@ void tst_qquicktextedit::keys_shortcutoverride()
     // Tests that QML TextEdit receives Keys.onShortcutOverride  (QTBUG-68711)
     QQuickView window;
     QVERIFY(QQuickTest::showView(window, testFileUrl("keys_shortcutoverride.qml")));
-    QQuickTextEdit *textEdit = window.rootObject()->findChild<QQuickTextEdit*>();
+    QQuickTextEdit *textEdit = window.rootObject()->findChild<QQuickTextEdit*>(QLatin1String("txt"));
     QVERIFY(textEdit);
     QQuickRectangle *rectangle = window.rootObject()->findChild<QQuickRectangle*>(QLatin1String("rectangle"));
     QVERIFY(rectangle);
@@ -6624,6 +6624,14 @@ void tst_qquicktextedit::keys_shortcutoverride()
     textEdit->setFocus(true);
     QTest::keyPress(&window, Qt::Key_Escape);
     QCOMPARE(window.rootObject()->property("who").value<QString>(), QLatin1String("TextEdit"));
+
+    // Check for any valid input to the text edit
+    auto *textEditOverride = window.rootObject()->findChild<QQuickTextEdit*>(QLatin1String("testOverride"));
+    QVERIFY(textEditOverride);
+    textEditOverride->setFocus(true);
+    QTest::keyPress(&window, Qt::Key_A);
+    // Retain the same text and shouldn't switch to "ShortcutA"
+    QCOMPARE(window.rootObject()->property("who"), "TextEdit");
 }
 
 void tst_qquicktextedit::transparentSelectionColor()
